copy folder into modified and change path css

--- a/home.html
+++ b/home.html
@@ -4,9 +4,9 @@
   <!-- Created using eXe: http://exelearning.org -->
   <head>
     <style type="text/css">
-      @import url(base-mod.css);
-      @import url(content-mod.css);
-      @import url(nav-mod.css);
+      @import url(base.css);
+      @import url(content.css);
+      @import url(nav.css);
     </style>
     <title>BIOKIMIA PANGAN (PANG4222)</title>
     <meta http-equiv="Content-Type" content="text/html;  charset=utf-8" />
