change index.html to question and add question from 8 to 14

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="content">
-      <div id="navcontainer">
+      <div id="navcontainer" style="position: fixed">
         <ul id="navlist">
           <div id="active" class="withChild">BIOKIMIA PANGAN (PANG4222)</div>
           <div><a href="petunjuk_kerja.html" class="withoutChild">PETUNJUK KERJA</a></div>
