--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="content">
-      <div id="navcontainer">
+      <!-- <div id="navcontainer">
         <ul id="navlist">
           <div><a href="index.html" class="withChild">BIOKIMIA PANGAN (PANG4222)</a></div>
           <div><a href="petunjuk_kerja.html" class="withoutChild">PETUNJUK KERJA</a></div>
@@ -25,9 +25,11 @@
           <div><a href="soal_no_29__36.html" class="withoutChild">SOAL NO. 29 - 36</a></div>
           <div><a href="soal__no_37__40.html" class="withoutChild">SOAL NO. 37 - 40</a></div>
         </ul>
-      </div>
+      </div> -->
       <div id="main">
-        <div id="nodeDecoration"><p id="nodeTitle">SOAL NO. 1 - 40</p></div>
+        <div id="nodeDecoration"><p id="nodeTitle">BIOKIMIA PANGAN</p></div>
+        <br>
+        <div id="nodeDecoration"><p id="nodeSubTitle">Latihan </p></div>
         <script type="text/javascript" src="common.js"></script>
         <script type="text/javascript" src="libot_drag.js"></script>
         <div class="iDevice emphasis1">
